--- a/index.html
+++ b/index.html
@@ -8,5 +8,16 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" />
+    <img
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+      alt="Lion yawning in a field"
+    />
+    <img
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+      alt="Lion yawning in a field"
+      title="Strong & Tired"
+    />
   </body>
+
 </html>
